Remove theme settings functionality

--- a/src/Tessera.App/App.axaml
+++ b/src/Tessera.App/App.axaml
@@ -1,9 +1,9 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="Tessera.App.App"
-             RequestedThemeVariant="Default"
              xmlns:fui="using:FluentAvalonia.Styling"
-             xmlns:mvvm="clr-namespace:Tessera.App.MVVM">
+             xmlns:mvvm="clr-namespace:Tessera.App.MVVM"
+             RequestedThemeVariant="Light">
     <Application.DataTemplates>
         <mvvm:ViewLocator />
     </Application.DataTemplates>
